# triple_barrier_prediction

./: .gitignore  GA_optimization.py  GBM_stacking.py  README.md  TDL.txt  equity_strategy.py  pyproject.toml  triple_barrier_method.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: AAPL_df_labeled_test.csv  bitcoin_2018-01-01_2025-01-01.csv  data_HRHP.csv  data_LRLP.csv  data_tweets.csv  df_labeled.csv  df_tbm_trading_strategy.csv  merged_data.csv  tbm_parameters.json  tbm_parameters_HRHP.json  tbm_parameters_LRLP.json  test_HRHP.csv  test_LRLP.csv  train_HRHP.csv  train_LRLP.csv
data/tweets/: tweets_data_CoinDesk.csv  tweets_data_LynAldenContact.csv  tweets_data_PeterLBrandt.csv  tweets_data_PrestonPysh.csv  tweets_data_documentingbtc.csv  tweets_data_rektcapital.csv  tweets_data_saylor.csv  tweets_data_scottmelker.csv  tweets_data_woonomic.csv
data/tweets/saylor/: tweets_data_saylor_2024-12-01_2024-12-05.csv
data/tweets/saylor - Copie/: tweets_data_saylor_2024-12-05_2024-12-10.csv
models/: gbm_stacking_model_HRHP.pkl
src/: df_builder.ipynb  main.py  predict.ipynb
src/api/: main.py  services.py
src/df_building/: df_builder.ipynb  get_data_scraping.py  get_sentiment_score.py
src/labeling/: GA_optimization.py  triple_barrier_method.py
src/predict/: GBM_stacking.py
src/prediction/: GBM_stacking.py  predict.ipynb
src/routers/: api_data.py  get_api_data.py  get_tweets.py  health.py  index.py  predict.py  tweets.py
src/scraping/: scraping.py
(+10 files in other folders)
