[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["louis_lebreton <lebretonlouis@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
deap = "^1.4.1"
yfinance = "^0.2.50"
matplotlib = "^3.9.2"
xgboost = "^2.1.2"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
